# happi

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  pyproject.toml
.bdd/: conftest.py  test_integration.py
.bdd/features/: BDD-STATUS.md
.bdd/features/config/: profiles.feature
.bdd/features/display/: error-output.feature  hints.feature
.bdd/features/docs/: markdown-gen.feature  mermaid-gen.feature
.bdd/features/engine/: bugfix-duplicate-verbs.feature  bugfix-global-flags.feature  command-tree.feature  execute-actions.feature  execute-crud.feature  response-stack.feature
.bdd/features/http/: auth.feature
.bdd/features/spec/: bugfix-list-vs-show.feature  bugfix-missing-resources.feature  conftest.py  extract-resources.feature  infer-relations.feature  infer-verbs.feature  load-spec.feature  test_spec.py
.bdd/interactions/: cli_helpers.py  cli_runner.py  test_server.py
.bdd/steps/: spec_steps.py
.bdd/support/: conftest.py
.bdd/support/fixtures/: README.md  download-fixtures.sh
.idd/: project.intent.md
.idd/architecture/: boundaries.md  dependencies.md
.idd/modules/config/: INTENT.md
.idd/modules/display/: INTENT.md
.idd/modules/docs/: INTENT.md
.idd/modules/engine/: INTENT.md
.idd/modules/http/: INTENT.md
.idd/modules/spec/: INTENT.md
.idd/records/: INDEX.md
demo/: index.html
src/happi/: __main__.py  cli.py  log.py
src/happi/config/: auth.py  config.py  overrides.py
src/happi/display/: basic.py  history.py
src/happi/docs/: markdown.py  mermaid.py
src/happi/engine/: executor.py  history.py  stack.py  tree.py
src/happi/http/: client.py  pagination.py
src/happi/spec/: lap.py  loader.py  model.py  relations.py  resources.py  verbs.py
